# girtobac

./: .gitattributes  .gitignore  CMakeLists.txt  ReadMe.md  _1_Introduction.md  _2_Preparation.md  _3_Tutorial.md  _9_ChangeLog.md  _ChangeLog.md  _Introduction.md  _Preparation.md  _ReadMe.md.in  _Tutorial.md
Gir/: Atk-1.0.GirToBac  Atspi-2.0.GirToBac  Dbusmenu-0.4.GirToBac  GConf-2.0.GirToBac  GIRepository-2.0.GirToBac  GLib-2.0.GirToBac  GLib-2.0.bi  GLib-2.0.bi.org  GObject-2.0.GirToBac  Gda-5.0.GirToBac  Gdk-2.0.GirToBac  Gdk-3.0.GirToBac  Gdk-4.0.GirToBac  GdkPixbuf-2.0.GirToBac  GdkX11-3.0.GirToBac  Gee-0.8.GirToBac  Gee-1.0.GirToBac  Gio-2.0.GirToBac  Gio-2.0.bi.org  GnomeKeyring-1.0.GirToBac  GooCanvas-2.0.GirToBac  Graphene-1.0.GirToBac  Gst-1.0.GirToBac  Gtk-2.0.GirToBac  Gtk-3.0.GirToBac  Gtk-4.0.GirToBac  GtkExtra-3.0.GirToBac  GtkSource-3.0.GirToBac  HarfBuzz-0.0.GirToBac  JavaScriptCore-4.0.GirToBac  Json-1.0.GirToBac  Pango-1.0.GirToBac  PangoCairo-1.0.GirToBac  PangoFT2-1.0.GirToBac  PangoFc-1.0.GirToBac  PangoOT-1.0.GirToBac  PangoXft-1.0.GirToBac  Poppler-0.18.GirToBac  ReadMe.md  Soup-2.4.GirToBac  (+11 more)
cmake/Modules/: CMakeFbcInformation.cmake  UseFbDoc.cmake
doc/: CMakeLists.txt  DoxyExtension.in  Doxyfile  girtobac.xml
doxy/: CMakeLists.txt  Doxyfile  ReadMe.md  fb-doc.lfn
example/: GLib-2.0.gir  ReadMe.md
src/: CMakeLists.txt  ReadMe.md  girtobac.bas  girtobac_RepData.bas  girtobac_text.bi.in
src/Gir/: ReadMe.md  _GirToBac-0.0.bi
